# avito_case

./: .env.example  .gitignore  README.md  README_JURY.md  pyproject.toml  requirements.txt  rnc_dataset_markup.csv
data/examples/: demo_samples.json  example_dataset.json  microcategories.json  microcategories_rnc.json  regression_cases.json
docs/: architecture.md
main_page/: pnpm-lock.yaml
main_page/app/: globals.css  layout.tsx  page.tsx
main_page/components/: custom-cursor.tsx  hero-section.tsx  motivation-section.tsx  search-bubble.tsx  transition-section.tsx
notebooks/: exploration.ipynb
scripts/: analyze_recall_errors.py  evaluate.py  metrics.py  run_local.py  tune_split_holdout.py
src/project_name/: __init__.py  categorizer.py  config.py  llm_drafts.py  morph_detect.py  schema.py  utils.py
tests/: test_categorizer.py  test_morph_detect.py  test_regression_cases.py  test_schema.py  test_web.py
tests/test_data/: sample_input.json
web/: app.py  draft_worker.py
web/static/: app.js  index.html  styles.css
